// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots z|c2c/PropertyItem saved-post 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 8,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Object {
        "height": 257,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": "100%",
              "width": "100%",
            },
          ]
        }
      >
        <FastImageView
          imageStyle={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
          indicator={[Function]}
          onFastImageLoadEnd={[Function]}
          renderError={[Function]}
          resizeMode="cover"
          size={115}
          source={
            Object {
              "uri": "https://perstoresb.blob.core.windows.net/images/1652235550969_3c981111028d4fd2adde6890bb489a3e.jpg",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderBottomWidth": 1,
        "borderColor": "#CCD1D9",
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 12,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          Object {
            "color": "#313131",
            "fontFamily": "Nunito-Bold",
            "fontSize": 16,
            "includeFontPadding": true,
          }
        }
      >
        Cần bán căn hộ chính chủ - 123m2 - 1 pn - 1 wc - 12 tỷ - Thành phố Thủ Đức
      </Text>
      <View
        style={
          Array [
            Object {
              "backgroundColor": undefined,
              "height": 4,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#767676",
            "fontFamily": "Nunito-Regular",
            "fontSize": 14,
            "includeFontPadding": true,
            "lineHeight": 22,
          }
        }
      >
        2 Le Duy Nhuan, Bình Chiểu, Thành phố Thủ Đức, Hồ Chí Minh.
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#CCD1D9",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingHorizontal": 12,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#E53030",
              "fontFamily": "Nunito-Bold",
              "fontSize": 16,
              "includeFontPadding": true,
            }
          }
        >
          12 tỷ
        </Text>
        <Text
          style={
            Object {
              "color": "#313131",
              "fontFamily": "Nunito-Regular",
              "fontSize": 16,
              "includeFontPadding": true,
            }
          }
        >
           - 123
           m2
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#313131",
            "fontFamily": "Nunito-Regular",
            "fontSize": 16,
            "includeFontPadding": true,
          }
        }
      >
        Đông Bắc
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots z|c2c/PropertyItem your-post 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 8,
      "opacity": 1,
      "overflow": "hidden",
    }
  }
>
  <View
    style={
      Object {
        "height": 257,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "height": "100%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": "100%",
              "width": "100%",
            },
          ]
        }
      >
        <FastImageView
          imageStyle={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
          indicator={[Function]}
          onFastImageLoadEnd={[Function]}
          renderError={[Function]}
          resizeMode="cover"
          size={115}
          source={
            Object {
              "uri": "https://perstoresb.blob.core.windows.net/images/1652235550969_3c981111028d4fd2adde6890bb489a3e.jpg",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "left": 8,
            "position": "absolute",
            "top": 8,
          },
          undefined,
          Object {
            "left": 12,
            "top": 12,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#E53030",
              "borderRadius": 100,
              "flexDirection": "row",
              "height": 32,
              "justifyContent": "center",
              "marginRight": 8,
              "paddingHorizontal": 10,
            },
            Object {
              "backgroundColor": "#FFF3EB",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontFamily": "Nunito-Bold",
                "fontSize": 16,
                "includeFontPadding": true,
              },
              Object {
                "color": "#99521F",
                "fontFamily": "Nunito-Regular",
                "includeFontPadding": true,
              },
            ]
          }
        >
          Chờ duyệt
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 8,
        "borderBottomWidth": 1,
        "borderColor": "#CCD1D9",
        "borderLeftWidth": 1,
        "borderRightWidth": 1,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 12,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          Object {
            "color": "#313131",
            "fontFamily": "Nunito-Bold",
            "fontSize": 16,
            "includeFontPadding": true,
          }
        }
      >
        Cần bán căn hộ chính chủ - 123m2 - 1 pn - 1 wc - 12 tỷ - Thành phố Thủ Đức
      </Text>
      <View
        style={
          Array [
            Object {
              "backgroundColor": undefined,
              "height": 4,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#767676",
            "fontFamily": "Nunito-Regular",
            "fontSize": 14,
            "includeFontPadding": true,
            "lineHeight": 22,
          }
        }
      >
        2 Le Duy Nhuan, Bình Chiểu, Thành phố Thủ Đức, Hồ Chí Minh.
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#CCD1D9",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingHorizontal": 12,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#E53030",
              "fontFamily": "Nunito-Bold",
              "fontSize": 16,
              "includeFontPadding": true,
            }
          }
        >
          12 tỷ
        </Text>
        <Text
          style={
            Object {
              "color": "#313131",
              "fontFamily": "Nunito-Regular",
              "fontSize": 16,
              "includeFontPadding": true,
            }
          }
        >
           - 123
           m2
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#313131",
            "fontFamily": "Nunito-Regular",
            "fontSize": 16,
            "includeFontPadding": true,
          }
        }
      >
        Đông Bắc
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#CCD1D9",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingHorizontal": 12,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#767676",
              "fontFamily": "Nunito-Regular",
              "fontSize": 16,
              "includeFontPadding": true,
            }
          }
        >
          Ngày đăng tin
          :
           
        </Text>
        <Text
          style={
            Object {
              "color": "#313131",
              "fontFamily": "Nunito-Regular",
              "fontSize": 16,
              "includeFontPadding": true,
            }
          }
        >
          11/05/2022
        </Text>
      </View>
    </View>
  </View>
</View>
`;
